Reworked Reaper ultimate

--- a/Mod/Data/Core/Languages/English/Actions.xml
+++ b/Mod/Data/Core/Languages/English/Actions.xml
@@ -121,6 +121,7 @@
     <entry name="Necrons/QuantumDeflectionDescription" value="<string name='Traits/Necrons/QuantumDeflectionDescription'/>" />
     <entry name="Necrons/QuantumDeflectionFlavor" value="<string name='Traits/Necrons/QuantumDeflectionFlavor'/>" />
     <entry name="Necrons/QuantumShieldingDescription" value="Increases the invulnerable damage reduction." />
+    <entry name="Necrons/ReaperDescription" value="Increases the armour, the attacks range, the damage and the movement. Jet Charge recharges when the Destroyer Lord gains experience from combat."/>
     <entry name="Necrons/StormOfFlensingBlades" value="Storm Of Flensing Blades" />
     <entry name="Necrons/StormOfFlensingBladesDescription" value="Increases the movement." />
     <entry name="Necrons/TriarchPraetorianJumpPack" value="<string name='Actions/JumpPack'/>" />
