--- a/Mod/Data/Core/Languages/English/Buildings.xml
+++ b/Mod/Data/Core/Languages/English/Buildings.xml
@@ -11,6 +11,8 @@
     <entry name="Tau/ConstructionDescription" value="Building that constructs new buildings as well as increases growth, generates ore, research and influence." />
     <entry name="Tyranids/ConstructionDescription" value="Building that constructs new buildings as well as increases growth, generates biomass and increases the population limit." />
     <entry name="Tau/MonstrousCreaturesDescription" value="Building that produces monstrous creatures as well as generates research and influence." />
+    <entry name="SistersOfBattle/VehiclesFlavor" value="The vehicles of the Adepta Sororitas are ancient—relic battle tanks of long-ago crusades. In this hangar, Exarsists, Castigators and Immolators have their machine spirits revived by the Ministorum technicians, are sprinkled with sacred oils, and sacred incantations handed down for thousands of years. To the T’au and Votann, this would be rank superstition—yet the machines work with a deadly efficiency."/>
+
 </language>
 
 
