--- a/Mod/Data/Core/Languages/English/Units.xml
+++ b/Mod/Data/Core/Languages/English/Units.xml
@@ -42,4 +42,6 @@
     <entry name="Tau/ShieldDrone" value="Shield Drones" />
     <entry name="Tau/StealthDrone" value="Stealth Drones" />
     <entry name="Tau/RVarnaBattlesuit" value="R'Varna Battlesuit"/>
+
+    <entry name="SistersOfBattle/Exorcist" value="Exarsist"/>
 </language>
