--- a/Mod/Data/Core/Languages/English/Weapons.xml
+++ b/Mod/Data/Core/Languages/English/Weapons.xml
@@ -6,6 +6,10 @@
     <entry name="BoltSniperRifleFlavor" value="Sniper rifles have powerful telescopic sights, enabling the firer to target weak points and distant foes with unerring accuracy. Some commanders see the sniper rifle as a dishonourable weapon, but they are in the minority. Most understand that pragmatism, and dead enemies, win more battles than honour ever will." />
     <entry name="CadrePulseRifle" value="Cadre's Pulse Rifle" />
     <entry name="CadrePulseRifleFlavor" value="<string name='Weapons/PulseRifleFlavor'/>" />
+    <entry name="CaptainBoltPistol" value="Bolt Pistol"/>
+    <entry name="CaptainBoltPistolFlavor" value="<string name='Weapons/BoltFlavor'/>"/>
+    <entry name="CaptainPowerSword" value="Power Sword"/>
+    <entry name="CaptainPowerSwordFlavor" value="<string name='Weapons/PowerFlavor'/>"/>
     <entry name="DestroyerWarscythe" value="<string name='Weapons/Warscythe'/>" />
     <entry name="DestroyerWarscytheFlavor" value="<string name='Weapons/WarscytheFlavor'/>" />
     <entry name="EradicatorNovaCannon" value="Eradicator Nova Cannon" />
